--- a/app/templates/tournament_details.html
+++ b/app/templates/tournament_details.html
@@ -212,10 +212,7 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="bg-black border-t border-gray-800 py-8 text-center text-gray-500">
-    <p>&copy; 2025 Sand World Esports. May the most evil clicker win.</p>
-  </footer>
+  {% include 'footer.html' %}
 
 </body>
 </html>
