--- a/app/templates/user_profile.html
+++ b/app/templates/user_profile.html
@@ -51,6 +51,4 @@
     </div>
   </section>
 
-  <footer class="py-8 text-center text-sm text-gray-500 bg-black border-t border-gray-800">
-    &copy; 2025 Sand World Evil Financing. All rights reserved.
-  </footer>
+  {% include 'footer.html' %}
