--- a/app/templates/match_details.html
+++ b/app/templates/match_details.html
@@ -366,8 +366,6 @@
         </div>
     </div>
 
-    <footer class="py-8 text-center text-sm text-gray-500 bg-gradient-to-r from-black to-gray-900 border-t-2 border-gray-700 mt-12">
-        &copy; 2025 Sand World Evil Financing. Paid for by Lebanese Taxpayers.
-    </footer>
+    {% include 'footer.html' %}
 </body>
 </html>
