--- a/app/templates/tournament.html
+++ b/app/templates/tournament.html
@@ -223,7 +223,7 @@
 
       <div class="mt-10 text-left text-gray-200 inline-block">
         <h2 class="text-2xl text-yellow-300">📝 Tournament Info</h2>
-        <p class="mt-2">Date: 26.7.2025<br>Format: Double Elimination, Best of Seven<br>Details: Held in Lazer, BYO mappool (10 maps)<br>Prize Pool: Two coop Beers</p>
+        <p class="mt-2">Date: 26.7.2025<br>Format: Double Elimination, Best of Seven<br>Details: Held in Lazer, BYO mappool (10 maps)<br>Prize Pool: 20€ Bar Edgar Gift Card</p>
       </div>
 
       <div class="mt-8">
